--- a/.gitignore
+++ b/.gitignore
@@ -178,6 +178,10 @@ electron-react-app/.eslintcache
 # Dependency directory
 # https://www.npmjs.org/doc/misc/npm-faq.html#should-i-check-my-node_modules-folder-into-git
 electron-react-app/node_modules
+electron-react-app/src/node_modules
+
+# direnv cache directory
+.direnv/
 
 # OSX
 .DS_Store
